--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "element-plus": "^2.2.28",
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
+    "unplugin-auto-import": "^0.12.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "less": "^4.1.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
