--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
@@ -14,10 +14,12 @@
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "unocss": "^0.49.1",
     "unplugin-auto-import": "^0.12.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@iconify-json/ic": "^1.1.12",
     "@types/lodash": "^4.14.191",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
