--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "pinia": "^2.0.29",
+    "rollup-plugin-visualizer": "^5.9.0",
     "unocss": "^0.49.1",
     "unplugin-auto-import": "^0.12.1",
+    "vite-plugin-pwa": "^0.14.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
