--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "dayjs": "^1.11.7",
     "element-plus": "^2.2.28",
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
